# agent_zero

./: .gitignore  Makefile  pyproject.toml
agent_zero/: controller.py  data.py  main.py  pyproject.toml  tasks.py  tasks_manager.py
backend_server/: config.py  main.py  pyproject.toml
backend_server/handlers/: connections.py  llm.py  websocket_handler.py
backend_server/langgraph/: ai.py  rag.py
chat_frontend/: chat-interface.tsx  next.config.mjs  package-lock.json  package.json  tsconfig.json
chat_frontend/app/: client-layout.tsx
chat_frontend/components/: task-done-popup.tsx
chat_frontend/context/: UpdatesContext.tsx
chat_frontend/utility/: UpdateEmitter.ts  jsonDataParser.js
chatbot_frontend/: package-lock.json  package.json
common_python/utils/: date_time.py
